# polyglotmesh

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  ci-quick.yml  ci.yml  release.yml
docs/: ARCHITECTURE.md  FEATURES.md  FUTURE_IMPROVEMENTS.md  ORIGINAL_REQUIREMENTS.txt
examples/: bootstrap.sh  config.sample.toml
scripts/: install.sh  mock_slow.py  smoke-test.sh
src/: error.rs  main.rs  metrics.rs  state.rs  storage.rs
src/admin/: mod.rs
src/auth/: mod.rs
src/config/: mod.rs  types.rs
src/proxy/: mod.rs
src/queue/: mod.rs
src/upstream/: mod.rs
static/: dashboard.html
