[package]
name = "polyglotmesh"
version = "0.1.0"
edition = "2021"
description = "polyglotmesh — a single OpenAI/Anthropic-compatible base URL in front of many LLM providers, with priority routing, per-key limits, queueing, and built-in observability."
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
keywords = ["llm", "router", "openai", "anthropic", "gateway", "ai", "observability"]
categories = ["api-bindings", "network-programming", "command-line-utilities"]
repository = "https://github.com/polyglotmesh/polyglotmesh"
homepage = "https://github.com/polyglotmesh/polyglotmesh"
documentation = "https://docs.rs/polyglotmesh"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-stream = "0.3"
notify = "6"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "brotli"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "6"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bytes = "1"
async-trait = "0.1"
once_cell = "1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
url = "2"
clap = { version = "4", features = ["derive", "env"] }
config = { version = "0.15", default-features = false, features = ["toml", "yaml"] }
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
